--- a/style.css
+++ b/style.css
@@ -153,3 +153,34 @@ h5 {
   text-align: center;
   font-size: 20px;
 }
+
+@media screen and (max-width: 600px) {
+  :root {
+      --base-font-size: 1.6rem;
+      --space: 2.8rem;
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .contacts{
+    color: #fff;
+    text-align: center;
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .email{
+    color: #fff;
+    text-align: center;
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .discord{
+    color: #fff;
+    text-align: center;
+    font-size: 20px;
+  }
+}
